Timer fixed on Firefox/Safari

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17943,8 +17943,8 @@ textarea.form-control-lg {
 
 .flag {
   display: inline;
-  margin-right: 16px;
-  max-height: 14px;
+  margin-right: 15px;
+  max-height: 16px;
 }
 
 .qr-code canvas {
